Fix menu button wrapping

--- a/static/scss/components/_navigation.scss
+++ b/static/scss/components/_navigation.scss
@@ -365,6 +365,8 @@
 
     .menu-list__text {
       margin: 0;
+      flex: 1 0 100%;
+      text-align: center;
     }
   }
 
